# aoc-2023

./: Cargo.toml  Justfile  template.rs
examples/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day17_old.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
examples/inputs/: day17_custom.txt
src/: co2.rs  co3.rs  lib.rs
timings/: day1.time  day5.time
