[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
array_tool = "1.0.3"
fs-err = "2.9.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
rayon = "1.6.1"
regex = "1.7.0"
